# interface_trykernel

./: ReadMe.md  arm_toolchain.cmake  changelog.md
part_2/sect_3/application/: main.c
part_2/sect_3/boot/: reset_hdr.c  vector_tbl.c
part_2/sect_3/include/: syslib.h
part_3/sect_1/application/: main.c
part_3/sect_2/application/: usermain.c
part_3/sect_3/application/: usermain.c
part_4/sect_1/application/: usermain.c
part_4/sect_1/boot/: reset_hdr.c
part_4/sect_1/kernel/: systimer.c
part_4/sect_2/application/: usermain.c
part_4/sect_2/boot/: reset_hdr.c
part_4/sect_2/include/: knldef.h
part_4/sect_2/kernel/: inittsk.c  systimer.c
part_4/sect_3/application/: usermain.c
part_4/sect_3/kernel/: eventflag.c  semaphore.c  systimer.c
part_5/: CMakeLists.txt
part_5/application/: gsns.c  lcd.c  lsns.c
part_5/device/devmgr/: device_tbl.c
part_5/include/: knldef.h
